# huggingface

./: README.md  pyproject.toml
huggingface/cached_models/: phi3.py  smol.py
huggingface/sentiment_analysis/: __main__.py
huggingface/text2speech/: __main__.py
