[tool.poetry]
name = "huggingface"
version = "0.1.0"
description = ""
authors = ["Fernando González Tostado <68973307+esponges@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.44.2"
torch = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
