[tool.poetry]
name = "huggingface"
version = "0.1.0"
description = ""
authors = ["Fernando González Tostado <68973307+esponges@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = {extras = ["sentencepiece"], version = "^4.44.2"}
torch = "^2.4.1"
datasets = "^2.21.0"
sentencepiece = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
